Fix: Vercel routing and absolute redirect paths

--- a/basic-menu/vercel.json
+++ b/basic-menu/vercel.json
@@ -14,6 +14,10 @@
     {
       "source": "/menu",
       "destination": "/menu/index.html"
+    },
+    {
+      "source": "/login",
+      "destination": "/admin/login/index.html"
     }
   ]
 }
